airscore/static/css/frontend.css
/*!
 *  Font Awesome 4.7.0 by @davegandy - http://fontawesome.io - @fontawesome
 *  License - http://fontawesome.io/license (Font: SIL OFL 1.1, CSS: MIT License)
 */
/* FONT PATH
 * -------------------------- */
@font-face {
  font-family: 'FontAwesome';
  src: url(/static/build/_/node_modules/font-awesome/fonts/fontawesome-webfont.eot);
  src: url(/static/build/_/node_modules/font-awesome/fonts/fontawesome-webfont.eot?#iefix&v=4.7.0) format('embedded-opentype'), url(/static/build/af7ae505a9eed503f8b8e6982036873e.woff2) format('woff2'), url(/static/build/fee66e712a8a08eef5805a46892932ad.woff) format('woff'), url(/static/build/_/node_modules/font-awesome/fonts/fontawesome-webfont.ttf) format('truetype'), url(/static/build/_/node_modules/font-awesome/fonts/fontawesome-webfont.svg#fontawesomeregular) format('svg');
  font-weight: normal;
  font-style: normal;
}
.fa {
  display: inline-block;
  font: normal normal normal 14px/1 FontAwesome;
  font-size: inherit;
  text-rendering: auto;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}
/* makes the font 33% larger relative to the icon container */
.fa-lg {
  font-size: 1.33333333em;
  line-height: 0.75em;
  vertical-align: -15%;
}
.fa-2x {
  font-size: 2em;
}
.fa-3x {
  font-size: 3em;
}
.fa-4x {
  font-size: 4em;
}
.fa-5x {
  font-size: 5em;
}
.fa-fw {
  width: 1.28571429em;
  text-align: center;
}
.fa-ul {
  padding-left: 0;
  margin-left: 2.14285714em;
  list-style-type: none;
}
.fa-ul > li {
  position: relative;
}
.fa-li {
  position: absolute;
  left: -2.14285714em;
  width: 2.14285714em;
  top: 0.14285714em;
  text-align: center;
}
.fa-li.fa-lg {
  left: -1.85714286em;
}
.fa-border {
  padding: .2em .25em .15em;
  border: solid 0.08em #eeeeee;
  border-radius: .1em;
}
.fa-pull-left {
  float: left;
}
.fa-pull-right {
  float: right;
}
.fa.fa-pull-left {
  margin-right: .3em;
}
.fa.fa-pull-right {
  margin-left: .3em;
}
.fa-sign-out:before {
  content: "\f08b";
}
.fa-linkedin-square:before {
  content: "\f08c";
}
.fa-thumb-tack:before {
  content: "\f08d";
}
.fa-external-link:before {
  content: "\f08e";
}
.fa-sign-in:before {
  content: "\f090";
}

.pre-wrap {
  white-space: pre-wrap;
}

nav .main {
    color: rgba(255,255,255,.9)!important;
}

nav .main:hover {
    color: rgba(255,255,255,1)!important;
}

/* Header */

header.h2 {
    padding-bottom: .5rem;
    border-bottom: 2px solid #343a40;
    margin-bottom: 1rem;
}

/* Results */

.sex-F, .sex-F:link, .sex-F:link:visited {
  color: deeppink;
}

.task_code, .task_code:link, .task_code:link:visited {
  font-size: .75em;
}

table.tasks-list {
  margin: 1em 0 1em 0;
}

td.tasks-list:first-child, th.tasks-list:first-child {
  padding: 0 1em 0 0;
}

td.tasks-list, th.tasks-list {
  padding: 0 1em 0 1em;
}

td.tasks-list:last-child, th.tasks-list:last-child,
td.tasks-list:nth-child(3), th.tasks-list:nth-child(3) {
  padding: 0 0 0 1em;
  text-align: right;
}

table.times-list {
  margin: 1em 0 1em 0;
}

td.times-list:first-child, th.times-list:first-child {
  padding: 0 1em 0 0;
}

td.times-list, th.times-list {
  padding: 0 1em 0 1em;
}

td.times-list:last-child, th.times-list:last-child {
  padding: 0 0 0 1em;
  text-align: right;
}

td.red {
  color: red;
}

table.wpt-list {

}

td.wpt-list:nth-child(3), td.wpt-list:nth-child(4) {
    text-align: right;
}

td.wpt-list, th.wpt-list {

}

td.wpt-list:last-child, th.wpt-list:last-child {

}

.warning {
  color: orange;
  text-decoration:underline;
}

#comments, #other_pilots {
  clear: both;
  margin: 15px;
}

table.comments {
  margin: .75em .5em 2em 0;
  width: 100%;
}

table.other_pilots_list {
  margin: .75em .5em 2em 0;
  width: auto;
}

td.other_pilots_list, td.comments {
  padding: 0 .75em 0 0;
}

div.hidden {
  display: none;
}

/* table lists */

.button {
  margin: 1rem 0 1rem 0;
}

.collapse-button {
  margin: 1rem 0 1rem 0;
}

.collapse {
  margin-bottom: 1rem;
}

/* footer */

footer {
  margin-top: 45px;
  padding-top: 5px;
  border-top: 1px solid #eaeaea;
  color: #999999;
}

footer a {
  color: #999999;
}

footer p {
  float: right;
  margin-right: 25px;
}

footer ul {
  list-style: none;
}

footer ul li {
  float: left;
  margin-left: 10px;
}

footer .company {
  float: left;
  margin-left: 25px;
}

footer .footer-nav {
  float: right;
  margin-right: 25px;
  list-style: none;
}

